# ai-hanoi-mcp

./: .gitignore  LICENSE  README.md  analyses copy.ipynb  analyses.ipynb  notes.md  pyproject.toml
client/: client_hanoi_tower.py
config/: hanoi_config.py
data/: hanoi_results.csv  hanoi_results_v1.csv  hanoi_results_v2.csv
server/: hanoi.py
